objects/CL_Product_Purpose_Junction__c.object
<CustomObject>
    <fields>
        <fullName>CL_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Product</label>
        <referenceTo>clcommon__CL_Product__c</referenceTo>
        <relationshipLabel>CL Product Purpose Junction</relationshipLabel>
        <relationshipName>CL_Product_Purpose_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CL_Purpose__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Purpose</label>
        <referenceTo>clcommon__CL_Purpose__c</referenceTo>
        <relationshipLabel>CL Product Purpose Junction</relationshipLabel>
        <relationshipName>CL_Product_Purpose_Junction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Amount_Delta__c</fullName>
        <label>Max Loan Amount Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Term_Delta__c</fullName>
        <label>Max Term Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Loan_Amount_Delta__c</fullName>
        <label>Min Loan Amount Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Term_Delta__c</fullName>
        <label>Min Term Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_RowId__c</fullName>
        <externalId>true</externalId>
        <label>Production_RowId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pep_sequence_key__c</fullName>
        <label>SequenceKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CL Product Purpose Junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CL_Product__c</columns>
        <columns>CL_Purpose__c</columns>
        <columns>Max_Term_Delta__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPJ-{0000000000}</displayFormat>
        <label>CL Product Purpose Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CL Product Purpose Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>